--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,11 @@ on:
 jobs:
   pypi_version:
     runs-on: ubuntu-latest
+    outputs:
+      latest_version: ${{ steps.get_pypi_version.outputs.latest_version }}
     steps:
       - name: Fetch information from PyPI
+        id: get_pypi_version
         run: |
           response=$(curl -s https://pypi.org/pypi/${{ github.event.repository.name }}/json || echo "{}")
           latest_version=$(echo $response | jq --raw-output "select(.releases != null) | .releases | keys_unsorted | last")
@@ -36,8 +39,7 @@ jobs:
 
       - name: Install Hatch
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install hatch
+          python -m pip install --upgrade pip setuptools wheel hatch
 
       - name: Compare current version with PyPI version
         id: version
