--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,7 +178,7 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/${NEW_TAG}",
+              ref: 'refs/tags/${{ needs.build_package.outputs.new_version }}',
               sha: context.sha
             })
 
