--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,26 +69,26 @@ jobs:
           name: dist
           path: dist/
 
-#  pypi_publish:
-#    name: Upload release to PyPI
-#    needs: [build_package]
-#    if: needs.build_package.outputs.new_version
-#    runs-on: ubuntu-latest
-#    environment:
-#      name: release
-#      url: https://pypi.org/p/${{ env.PACKAGE_NAME }}
-#    permissions:
-#      id-token: write
-#    steps:
-#      - name: Download artifacts
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: dist
-#          path: dist/
-#
-#      - name: Publish distribution to PyPI
-#        uses: pypa/gh-action-pypi-publish@release/v1
-#
+  pypi_publish:
+    name: Upload release to PyPI
+    needs: [build_package]
+    if: needs.build_package.outputs.new_version
+    runs-on: ubuntu-latest
+    environment:
+      name: release
+      url: https://pypi.org/p/${{ env.PACKAGE_NAME }}
+    permissions:
+      id-token: write
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist/
+
+      - name: Publish distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+
   github_tag:
     name: Create GitHub tag
     needs: [build_package]
@@ -109,28 +109,28 @@ jobs:
               sha: context.sha
             })
 
-#  github_release:
-#    name: Create GitHub Tag aRelease
-#    needs: [build_package]
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#    steps:
-#      - name: Checkout Code
-#        uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Download artifacts
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: dist
-#          path: dist/
-#
-#      - name: Create GitHub Release
-#        id: create_release
-#        env:
-#          GH_TOKEN: ${{ github.token }}
-#        run: |
-#          tag_name = ${{ needs.build_package.outputs.new_version }}
-#          gh release create ${tag_name} dist/* --title ${tag_name} --generate-notes
+  github_release:
+    name: Create GitHub Tag aRelease
+    needs: [build_package]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist/
+
+      - name: Create GitHub Release
+        id: create_release
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          tag_name=${{ needs.build_package.outputs.new_version }}
+          gh release create ${tag_name} dist/* --title ${tag_name} --generate-notes
