--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: release
 
 on:
-  push:
-    branches:
-      - "main"
-      - "master"
+  workflow_dispatch:
+
 
 jobs:
   pypi_version:
@@ -48,7 +46,7 @@ jobs:
           prev_version=${{ needs.pypi_version.outputs.latest_version }}
           if [ "$new_version" == "$prev_version" ]; then
             echo "No version update. Terminating workflow".
-            echo "Skipping remaining steps"
+            exit 0
           fi
           higher_version=$(printf '%s\n' "$new_version" "$prev_version" | sort -rV | head -n 1)
           if [ "$higher_version" != "$new_version" ]; then
@@ -60,12 +58,12 @@ jobs:
           fi
 
       - name: Build source and wheel distribution
-        if: steps.version.outputs.new_version
+        if: ${{ steps.version.outputs.new_version }}
         run: |
           hatch build
 
       - name: Upload artifacts
-        if: steps.version.outputs.new_version
+        if: ${{ steps.version.outputs.new_version }}
         uses: actions/upload-artifact@v3
         with:
           name: dist
@@ -74,7 +72,7 @@ jobs:
   github_tag:
     name: Create GitHub tag
     needs: [build_package]
-    if: needs.build_package.outputs.new_version
+    if: ${{ needs.build_package.outputs.new_version }}
     outputs:
       tag_name: ${{ steps.construct_tag_name.outputs.tag_name }}
     runs-on: ubuntu-latest
@@ -97,8 +95,9 @@ jobs:
             })
 
   github_release:
-    name: Create GitHub Tag aRelease
+    name: Create GitHub Release
     needs: [github_tag]
+    if: ${{ needs.github_tag.outputs.tag_name }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -121,3 +120,23 @@ jobs:
         run: |
           tag_name=${{ needs.github_tag.outputs.tag_name }}
           gh release create ${tag_name} dist/* --title "Release ${tag_name}" --notes-file CHANGELOG.md
+
+  pypi_publish:
+    name: Upload release to PyPI
+    needs: [github_release, github_tag]
+    if: ${{ needs.github_tag.outputs.tag_name }}
+    runs-on: ubuntu-latest
+    environment:
+      name: release
+      url: https:/pypi.org/p/sliplib
+    permissions:
+      id-token: write
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist/
+
+      - name: Publish distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
