--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.pyc
 .cache
 .coverage
+.coverage.*
 .externalToolBuilders
 .idea
 .mypy_cache
@@ -20,3 +21,4 @@ Lib
 pyvenv.cfg
 Scripts
 venv
+/coverage.json
