--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,12 +60,10 @@ jobs:
           fi
 
       - name: Build source and wheel distribution
-        if: steps.version.outputs.new_version
         run: |
           hatch build
 
       - name: Upload artifacts
-        if: steps.version.outputs.new_version
         uses: actions/upload-artifact@v3
         with:
           name: dist
@@ -74,7 +72,6 @@ jobs:
   github_tag:
     name: Create GitHub tag
     needs: [build_package]
-    if: needs.build_package.outputs.new_version
     outputs:
       tag_name: ${{ steps.construct_tag_name.outputs.tag_name }}
     runs-on: ubuntu-latest
@@ -121,3 +118,22 @@ jobs:
         run: |
           tag_name=${{ needs.github_tag.outputs.tag_name }}
           gh release create ${tag_name} dist/* --title "Release ${tag_name}" --notes-file CHANGELOG.md
+
+  pypi_publish:
+    name: Upload release to PyPI
+    needs: [github_release, github_tag]
+    runs-on: ubuntu-latest
+    environment:
+      name: release
+      url: https:/pypi.org/p/sliplib
+    permissions:
+      id-token: write
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist/
+
+      - name: Publish distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
