Repaired documentation, included changelog in docs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "sliplib"
 dynamic = ["version"]
 description = "Slip package"
-readme = "README.rst"
+readme = "README.md"
 license = "MIT"
 authors = [
     { name = "Ruud de Jong", email = "ruud.de.jong@xs4all.nl" },
