--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ env:
   FORCE_COLOR: "1"
 
 jobs:
-  run:
+  tests:
     name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -44,4 +44,55 @@ jobs:
       run: hatch fmt --check
 
     - name: Run tests
-      run: hatch run test.py${{ matrix.python-version }}:cov
+      run: hatch run test.py${{ matrix.python-version }}:test-cov
+
+    - name: Upload coverage data
+      uses: actions/upload-artifact@v3
+      with:
+        name: covdata
+        path: .coverage.*
+
+  coverage:
+    name: Coverage
+    needs:
+      tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
+
+      - name: Install dependencies
+        run:
+          python -m pip install --upgrade pip coverage[toml]
+
+      - name: Download coverage data
+        uses: actions/download-artifact@v3
+        with:
+          name: covdata
+
+      - name: Combine
+        run: |
+          coverage combine
+          coverage report -m --skip-covered
+          coverage json
+          export TOTAL=$(cat coverage.json | jq .totals.percent_covered_display)
+          echo "total=${TOTAL}" >> $GITHUB_ENV
+          echo "### Total coverage: ${TOTAL} %" >> $GITHUB_STEP_SUMMARY
+
+      - name: Make badge
+        uses: schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.GIST_TOKEN }}
+          gistID: 12a0c0616d67fc2b8b9cda9eda30be5d
+          filename: sliplib_coverage.svg
+          label: Coverage
+          message: ${{ env.total }} %
+          minColorRange: 50
+          maxColorRange: 90
+          valColorRange: ${{ env.total }}
+        
