--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ test-cov = "coverage run -m pytest {args:tests}"
 cov-report = [
     "- coverage combine",
     "coverage report",
+    "coverage json",
 ]
 cov = [
     "test-cov",
