--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         name: covdata
         path: .coverage.*
+        include-hidden-files: true
 
   coverage:
     name: Coverage
