Added code to generate badges

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,6 +78,8 @@ jobs:
 
       - name: Combine
         run: |
+          pwd
+          ls
           coverage combine
           coverage report -m --skip-covered
           coverage json
