--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,18 +9,18 @@ jobs:
     environment:
       name: release
     outputs:
-      release_version: ${{ steps.get_version.outputs.latest_version }}
+      release_version: ${{ steps.get_version.outputs.release_version }}
     steps:
       - name: Get version from branch name
         id: get_version
         run: |
           branch_name=${{ github.ref_name }}
-          version="${branch_name##release/}"
-          if [ "${version}" == "${branch_name}" ]; then
+          release_version="${branch_name##release/}"
+          if [ "${release_version}" == "${branch_name}" ]; then
             echo "Invalid branch name: ${branch_name}"
           else
-            echo "Release version: ${version}"
-            echo "release_version=${version}" >> $GITHUB_OUTPUT
+            echo "Release version: ${release_version}"
+            echo "release_version=${release_version}" >> "$GITHUB_OUTPUT"
           fi
 
   pypi_version:
@@ -28,25 +28,25 @@ jobs:
     environment:
       name: release
     outputs:
-      latest_version: ${{ steps.get_pypi_version.outputs.latest_version }}
+      pypi_version: ${{ steps.get_pypi_version.outputs.pypi_version }}
     steps:
       - name: Fetch information from PyPI
         id: get_pypi_version
         run: |
           response=$(curl -s https://pypi.org/pypi/${{ github.event.repository.name }}/json || echo "{}")
-          latest_version=$(echo $response | jq --raw-output "select(.releases != null) | .releases | keys_unsorted | last")
-          if [ -z "$latest_version" ]; then
+          pypi_version=$(echo $response | jq --raw-output "select(.releases != null) | .releases | keys_unsorted | last")
+          if [ -z "$pypi_version" ]; then
             echo "Package not found on PyPI."
-            latest_version="0.0.0"
+            pypi_version="0.0.0"
           fi
-          echo "Latest version on PyPI: $latest_version"
-          echo "latest_version=$latest_version" >> $GITHUB_OUTPUT
+          echo "Latest version on PyPI: $pypi_version"
+          echo "pypi_version=$pypi_version" >> "$GITHUB_OUTPUT"
 
   build_package:
     needs: [get_version_from_branch_name, pypi_version]
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.version.outputs.new_version }}
+      release_version: ${{ steps.version.outputs.release_version }}
     steps:
       - uses: actions/checkout@v2
 
@@ -90,16 +90,16 @@ jobs:
             echo "Repository version is now $(hatch version)"
           fi
 
-          echo "new_version=${new_version}" >> "$GITHUB_OUTPUT"
+          echo "release_version=${release_version}" >> "$GITHUB_OUTPUT"
 
 
       - name: Build source and wheel distribution
-        if: ${{ steps.version.outputs.new_version }}
+        if: ${{ steps.version.outputs.release_version }}
         run: |
           hatch build
 
       - name: Upload artifacts
-        if: ${{ steps.version.outputs.new_version }}
+        if: ${{ steps.version.outputs.release_version }}
         uses: actions/upload-artifact@v3
         with:
           name: dist
@@ -108,7 +108,7 @@ jobs:
   github_tag:
     name: Create GitHub tag
     needs: [build_package]
-    if: ${{ needs.build_package.outputs.new_version }}
+    if: ${{ needs.build_package.outputs.release_version }}
     outputs:
       tag_name: ${{ steps.construct_tag_name.outputs.tag_name }}
     runs-on: ubuntu-latest
@@ -118,7 +118,7 @@ jobs:
       - name: Construct tag name
         id: construct_tag_name
         run: |
-          tag_name=v${{ needs.build_package.outputs.new_version }}
+          tag_name=v${{ needs.build_package.outputs.release_version }}
           echo "Making new tag ${tag_name}"
           echo "tag_name=${tag_name}" >> $GITHUB_OUTPUT
       - name: Create tag
