--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,9 +47,9 @@ jobs:
       run: hatch run test.py${{ matrix.python-version }}:test-cov
 
     - name: Upload coverage data
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: covdata
+        name: covdata-${{ matrix.os }}-${{ matrix.python-version }}
         path: .coverage.*
         include-hidden-files: true
 
@@ -72,10 +72,11 @@ jobs:
           python -m pip install --upgrade pip coverage[toml]
 
       - name: Download coverage data
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: covdata
-
+          path: covdata
+          pattern: covdata-*
+          merge-multiple: true
       - name: Combine
         run: |
           python -m compileall examples src tests
