--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,56 +46,19 @@ jobs:
     - name: Run tests
       run: hatch run test.py${{ matrix.python-version }}:test-cov
 
-    - name: Upload coverage data
-      uses: actions/upload-artifact@v4
+    - name: Coveralls Parallel
+      uses: coverallsapp/github-action@v2
       with:
-        name: covdata-${{ matrix.os }}-${{ matrix.python-version }}
-        path: .coverage.*
-        include-hidden-files: true
+        flagname: covdata-${{ matrix.os }}-${{ matrix.python-version }}
+        parallel: true
 
-  coverage:
+  finish:
     name: Coverage
     needs:
       tests
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@v2
         with:
-          python-version: 3.12
-
-      - name: Install dependencies
-        run:
-          python -m pip install --upgrade pip coverage[toml]
-
-      - name: Download coverage data
-        uses: actions/download-artifact@v4
-        with:
-          path: covdata
-          pattern: covdata-*
-          merge-multiple: true
-      - name: Combine
-        run: |
-          python -m compileall examples src tests
-          coverage combine covdata
-          coverage report -i
-          coverage json -i
-          export TOTAL=$(cat coverage.json | jq -r .totals.percent_covered_display)
-          echo "total=${TOTAL}" >> $GITHUB_ENV
-          echo "### Total coverage: ${TOTAL} %" >> $GITHUB_STEP_SUMMARY
-
-      - name: Make badge
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: 69c76ab440390c14ee4e43d2dec24a00
-          filename: sliplib_coverage.svg
-          label: Coverage
-          message: ${{ env.total }} %
-          minColorRange: 50
-          maxColorRange: 90
-          valColorRange: ${{ env.total }}
-        
+          parallel-finished: true
