--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Coveralls Parallel
       uses: coverallsapp/github-action@v2
       with:
-        flagname: covdata-${{ matrix.os }}-${{ matrix.python-version }}
+        flag-name: covdata-${{ matrix.os }}-${{ matrix.python-version }}
         parallel: true
 
   finish:
