Moved to coveralls

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Run tests
       run: hatch run test.py${{ matrix.python-version }}:test-cov
 
+    - name: Coverage report
+      run: coverage xml -o covdata-${{ matrix.os }}-${{ matrix.python-version }}
+
     - name: Coveralls Parallel
       uses: coverallsapp/github-action@v2
       with:
