--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
       run: hatch run test.py${{ matrix.python-version }}:test-cov
 
     - name: Show files
-      run: ls
+      run: ls -a
 
     - name: Coverage report
       run: coverage xml -o covdata-${{ matrix.os }}-${{ matrix.python-version }}
