--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: test
 on:
   push:
   pull_request:
-    branches: [main, master]
+    branches: [main, master, develop]
 
 concurrency:
   group: test-${{ github.head_ref }}
@@ -44,57 +44,21 @@ jobs:
       run: hatch fmt --check
 
     - name: Run tests
-      run: hatch run test.py${{ matrix.python-version }}:test-cov
+      run: hatch run test.py${{ matrix.python-version }}:cov-xml
 
-    - name: Upload coverage data
-      uses: actions/upload-artifact@v3
+    - name: Coveralls Parallel
+      uses: coverallsapp/github-action@v2
       with:
-        name: covdata
-        path: .coverage.*
-        include-hidden-files: true
+        flag-name: covdata-${{ matrix.os }}-${{ matrix.python-version }}
+        parallel: true
 
-  coverage:
+  finish:
     name: Coverage
     needs:
       tests
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@v2
         with:
-          python-version: 3.12
-
-      - name: Install dependencies
-        run:
-          python -m pip install --upgrade pip coverage[toml]
-
-      - name: Download coverage data
-        uses: actions/download-artifact@v3
-        with:
-          name: covdata
-
-      - name: Combine
-        run: |
-          python -m compileall examples src tests
-          coverage combine
-          coverage report -i
-          coverage json -i
-          export TOTAL=$(cat coverage.json | jq -r .totals.percent_covered_display)
-          echo "total=${TOTAL}" >> $GITHUB_ENV
-          echo "### Total coverage: ${TOTAL} %" >> $GITHUB_STEP_SUMMARY
-
-      - name: Make badge
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: 12a0c0616d67fc2b8b9cda9eda30be5d
-          filename: sliplib_coverage.svg
-          label: Coverage
-          message: ${{ env.total }} %
-          minColorRange: 50
-          maxColorRange: 90
-          valColorRange: ${{ env.total }}
-        
+          parallel-finished: true
